--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ djangorestframework = "^3.14.0"
 psycopg2-binary = "^2.9.6"
 django-model-utils = "^4.3.1"
 gunicorn = "^20.1.0"
+djangorestframework-simplejwt = "^5.2.2"
 
 [tool.poetry.dev-dependencies]
 
