--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ psycopg2-binary = "^2.9.6"
 django-model-utils = "^4.3.1"
 gunicorn = "^20.1.0"
 djangorestframework-simplejwt = "^5.2.2"
+pytest = "^7.4.0"
 
 [tool.poetry.dev-dependencies]
 
